Make NetworkContext wait until on-disk prefs have been cleared.

Previously, NetworkContext::ClearNetworkingHistorySince would tell
HttpServerProperties to clear data, and then immediately inform the
caller that the data was cleared. The data was deleted from memory by
that point, but hadn't been written to disk, and we didn't even trigger
a flush to disk, at that point.

This CL makes changes that. We now pass in the callback to the
HttpServerProperties, which writes the data to the pref store and
then tells the pref store to flush data to disk. Only once the newly
cleared data has been flushed do we invoke the callback passed to
NetworkContext::ClearNetworkingHistorySince.

Bug: 795877
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.linux:linux_mojo;master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I4b1ed23eb5bdbab77871c79cdd068b95c0972535